force-app/main/default/objects/TypePicklist__c/TypePicklist__c.object-meta.xml
<CustomObject>
    <label>TypePicklist</label>
    <nameField>
        <label>Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TypePicklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>