force-app/main/default/objects/TypePicklist__c/fields/Concierge__c.field-meta.xml
<CustomField>
    <fullName>Concierge__c</fullName>
    <label>Concierge</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ConciergeService</valueSetName>
    </valueSet>
</CustomField>