force-app/main/default/objects/TypePicklist__c/fields/ConciergeService__c.field-meta.xml
<CustomField>
    <fullName>ConciergeService__c</fullName>
    <label>ConciergeService</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ConciergeService</valueSetName>
    </valueSet>
</CustomField>