force-app/main/default/objects/TypePicklist__c/fields/LifeStyle__c.field-meta.xml
<CustomField>
    <fullName>LifeStyle__c</fullName>
    <label>LifeStyle</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LifeStyleService</valueSetName>
    </valueSet>
</CustomField>