force-app/main/default/objects/TypePicklist__c/fields/LifeStyleService__c.field-meta.xml
<CustomField>
    <fullName>LifeStyleService__c</fullName>
    <label>LifeStyleService</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LifeStyleService</valueSetName>
    </valueSet>
</CustomField>