force-app/main/default/objects/TypePicklist__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <label>ServiceType</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Travel Services</fullName>
            </value>
            <value>
                <fullName>Concierge Services</fullName>
            </value>
            <value>
                <fullName>Lifestyle Management Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>