force-app/main/default/objects/TypePicklist__c/fields/ServiceTypeSingle__c.field-meta.xml
<CustomField>
    <fullName>ServiceTypeSingle__c</fullName>
    <label>ServiceTypeSingle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Request_Type</valueSetName>
    </valueSet>
</CustomField>