force-app/main/default/objects/TypePicklist__c/fields/TravelService__c.field-meta.xml
<CustomField>
    <fullName>TravelService__c</fullName>
    <label>TravelService</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TravelService</valueSetName>
    </valueSet>
</CustomField>