force-app/main/default/objects/TypePicklist__c/fields/TravelserviceSingle__c.field-meta.xml
<CustomField>
    <fullName>TravelserviceSingle__c</fullName>
    <label>TravelserviceSingle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TravelService</valueSetName>
    </valueSet>
</CustomField>